ES should tolerate disk pressure

--- a/Charts/elasticsearch/values.yaml
+++ b/Charts/elasticsearch/values.yaml
@@ -165,6 +165,9 @@ tolerations:
   - key: "neonkube.io/elasticsearch"
     operator: "Exists"
     effect: "NoSchedule"
+  - key: "node.kubernetes.io/disk-pressure"
+    operator: "Exists"
+    effect: "NoSchedule"
 
 # Enabling this will publically expose your Elasticsearch instance.
 # Only enable this if you have security enabled on your cluster
