--- a/Test/Test.Neon.Cadence.net/packages.config
+++ b/Test/Test.Neon.Cadence.net/packages.config
@@ -10,7 +10,7 @@
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="3.3.0-beta2-final" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.2.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.0.0-preview8.19405.4" targetFramework="net48" />
   <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.Net.Http.Server" version="1.1.4" targetFramework="net48" />
   <package id="Microsoft.NETCore.Platforms" version="2.2.2" targetFramework="net48" />
