--- a/Lib/Neon.Xunit.Cadence/Neon.Xunit.Cadence.csproj
+++ b/Lib/Neon.Xunit.Cadence/Neon.Xunit.Cadence.csproj
@@ -1,9 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>Neon.Xunit.Cadence</RootNamespace>
-    <Version>0.5.8-alpha</Version>
+    <Version>0.5.9-alpha</Version>
     <Authors>Jeff Lill</Authors>
     <Company>neonFORGE, LLC</Company>
     <Description>neonKUBE Xunit related extensions for Uber Cadence.</Description>
