--- a/Lib/Neon.Xunit.Kube/Neon.Xunit.Kube.csproj
+++ b/Lib/Neon.Xunit.Kube/Neon.Xunit.Kube.csproj
@@ -1,10 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>Neon.Xunit.Kube</RootNamespace>
     <PackageId>Neon.Xunit.Kube</PackageId>
-    <Version>0.5.8-alpha</Version>
+    <Version>0.5.9-alpha</Version>
     <Authors>Jeff Lill</Authors>
     <Product>neonKUBE</Product>
     <Description>neonKUBE Xunit testing helpers.</Description>
