Fix for: Cadence proxy resource files not generating as embedded resources

--- a/Lib/Neon.Cadence/Neon.Cadence.csproj
+++ b/Lib/Neon.Cadence/Neon.Cadence.csproj
@@ -42,6 +42,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\cadence-proxy.linux.gz" />
+    <None Remove="Resources\cadence-proxy.osx.gz" />
+    <None Remove="Resources\cadence-proxy.win.exe.gz" />
+  </ItemGroup>
+   
+  <ItemGroup>
     <None Include="..\..\LICENSE">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
