[cadence]: GOLANG binaries loaded as embedded resources again.

--- a/Lib/Neon.Cadence/Neon.Cadence.csproj
+++ b/Lib/Neon.Cadence/Neon.Cadence.csproj
@@ -42,6 +42,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\cadence-proxy.linux.gz" />
+    <None Remove="Resources\cadence-proxy.osx.gz" />
+    <None Remove="Resources\cadence-proxy.win.exe.gz" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\cadence-proxy.linux.gz" />
+    <EmbeddedResource Include="Resources\cadence-proxy.osx.gz" />
+    <EmbeddedResource Include="Resources\cadence-proxy.win.exe.gz" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="..\..\LICENSE">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
@@ -59,10 +71,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Neon.Common\Neon.Common.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Resources\" />
   </ItemGroup>
 
 </Project>
