--- a/Charts/fluentd/values.yaml
+++ b/Charts/fluentd/values.yaml
@@ -14,8 +14,8 @@ output:
   port: 9200
   scheme: http
   sslVersion: TLSv1
-  buffer_chunk_limit: 2M
-  buffer_queue_limit: 8
+  buffer_chunk_limit: 256M
+  buffer_queue_limit: 64
 
 env: {}
 
@@ -117,7 +117,7 @@ configMaps:
     <match **>
       @id elasticsearch
       @type elasticsearch
-      @log_level debug
+      @log_level info
       include_tag_key true
       # Replace with the host/port to your Elasticsearch cluster.
       host "#{ENV['OUTPUT_HOST']}"
@@ -125,17 +125,19 @@ configMaps:
       scheme "#{ENV['OUTPUT_SCHEME']}"
       ssl_version "#{ENV['OUTPUT_SSL_VERSION']}"
       logstash_format true
+      index_name logstash.%Y%m%d 
       <buffer>
         @type file
         path /var/log/fluentd-buffers/kubernetes.system.buffer
-        flush_mode interval
+        flush_mode immediate
         retry_type exponential_backoff
-        flush_thread_count 2
-        flush_interval 5s
-        retry_forever
+        flush_thread_count 4
+        reload_connections false
+        reconnect_on_error true
+        reload_on_failure true
+        retry_forever  true
         retry_max_interval 30
         chunk_limit_size "#{ENV['OUTPUT_BUFFER_CHUNK_LIMIT']}"
-        queue_limit_length "#{ENV['OUTPUT_BUFFER_QUEUE_LIMIT']}"
         overflow_action block
       </buffer>
     </match>
