--- a/Charts/kiali/templates/demosecret.yaml
+++ b/Charts/kiali/templates/demosecret.yaml
@@ -5,7 +5,7 @@ metadata:
   name: {{ .Values.kiali.dashboard.secretName }}
   namespace: {{ .Release.Namespace }}
   labels:
-    app: kiali
+    app.kubernetes.io/name: kiali
     release: {{ .Release.Name }}
 type: Opaque
 data:
