--- a/Charts/metricbeat/templates/deployment.yaml
+++ b/Charts/metricbeat/templates/deployment.yaml
@@ -5,19 +5,19 @@ kind: Deployment
 metadata:
   name: {{ template "metricbeat.fullname" . }}
   labels:
-    app: {{ template "metricbeat.name" . }}
+    app.kubernetes.io/name: {{ template "metricbeat.name" . }}
     chart: {{ template "metricbeat.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 spec:
   selector:
     matchLabels:
-      app: {{ template "metricbeat.name" . }}
+      app.kubernetes.io/name: {{ template "metricbeat.name" . }}
       release: {{ .Release.Name }}
   template:
     metadata:
       labels:
-        app: {{ template "metricbeat.name" . }}
+        app.kubernetes.io/name: {{ template "metricbeat.name" . }}
         release: {{ .Release.Name }}
       annotations:
         checksum/config: {{ toYaml (default .Values.deployment.config .Values.deployment.overrideConfig) | sha256sum }}
