--- a/Charts/elasticsearch/templates/configmap.yaml
+++ b/Charts/elasticsearch/templates/configmap.yaml
@@ -8,7 +8,7 @@ metadata:
     heritage: {{ .Release.Service | quote }}
     release: {{ .Release.Name | quote }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
-    app: "{{ template "uname" . }}"
+    app.kubernetes.io/name: "{{ template "uname" . }}"
 data:
 {{- range $path, $config := .Values.esConfig }}
   {{ $path }}: |
