--- a/Charts/fluentd/templates/pvc.yml
+++ b/Charts/fluentd/templates/pvc.yml
@@ -4,7 +4,7 @@ apiVersion: v1
 metadata:
   name: {{ template "fluentd.fullname" . }}
   labels:
-    app: {{ template "fluentd.name" . }}
+    app.kubernetes.io/name: {{ template "fluentd.name" . }}
     chart: {{ template "fluentd.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
