--- a/Charts/fluentd/templates/servicemonitor.yaml
+++ b/Charts/fluentd/templates/servicemonitor.yaml
@@ -7,7 +7,7 @@ metadata:
   namespace: {{ .Values.metrics.serviceMonitor.namespace }}
   {{- end }}
   labels:
-    app: {{ template "fluentd.name" . }}
+    app.kubernetes.io/name: {{ template "fluentd.name" . }}
     chart: {{ template "fluentd.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
@@ -28,6 +28,6 @@ spec:
       - {{ .Release.Namespace }}
   selector:
     matchLabels:
-      app: {{ include "fluentd.name" . }}
+      app.kubernetes.io/name: {{ include "fluentd.name" . }}
       release: {{ .Release.Name }}
 {{- end }}
