--- a/Charts/grafana/templates/clusterrolebinding.yaml
+++ b/Charts/grafana/templates/clusterrolebinding.yaml
@@ -4,7 +4,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: {{ template "grafana.fullname" . }}-clusterrolebinding
   labels:
-    app: {{ template "grafana.name" . }}
+    app.kubernetes.io/name: {{ template "grafana.name" . }}
     chart: {{ template "grafana.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
