--- a/Charts/grafana/templates/dashboards-json-configmap.yaml
+++ b/Charts/grafana/templates/dashboards-json-configmap.yaml
@@ -8,7 +8,7 @@ metadata:
   name: {{ template "grafana.fullname" $ }}-dashboards-{{ $provider }}
   namespace: {{ $.Release.Namespace }}
   labels:
-    app: {{ template "grafana.name" $ }}
+    app.kubernetes.io/name: {{ template "grafana.name" $ }}
     chart: {{ template "grafana.chart" $ }}
     release: {{ $.Release.Name }}
     heritage: {{ $.Release.Service }}
