--- a/Charts/grafana/templates/role.yaml
+++ b/Charts/grafana/templates/role.yaml
@@ -5,7 +5,7 @@ metadata:
   name: {{ template "grafana.fullname" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ template "grafana.name" . }}
+    app.kubernetes.io/name: {{ template "grafana.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
