--- a/Charts/grafana/templates/secret.yaml
+++ b/Charts/grafana/templates/secret.yaml
@@ -5,7 +5,7 @@ metadata:
   name: {{ template "grafana.fullname" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ template "grafana.name" . }}
+    app.kubernetes.io/name: {{ template "grafana.name" . }}
     chart: {{ template "grafana.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
