--- a/Charts/kiali/templates/service.yaml
+++ b/Charts/kiali/templates/service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: kiali
   namespace: {{ .Release.Namespace }}
   labels:
-    app: kiali
+    app.kubernetes.io/name: kiali
     release: {{ .Release.Name }}
 spec:
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       port: 20001
   selector:
-    app: kiali
+    app.kubernetes.io/name: kiali
