--- a/Charts/kiali/templates/serviceaccount.yaml
+++ b/Charts/kiali/templates/serviceaccount.yaml
@@ -10,5 +10,5 @@ metadata:
   name: kiali-service-account
   namespace: {{ .Release.Namespace }}
   labels:
-    app: kiali
+    app.kubernetes.io/name: kiali
     release: {{ .Release.Name }}
