--- a/Charts/kubernetes/templates/kube-state-metrics-deployment.yaml
+++ b/Charts/kubernetes/templates/kube-state-metrics-deployment.yaml
@@ -2,18 +2,18 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    k8s-app: kube-state-metrics
+    k8s-app.kubernetes.io/name: kube-state-metrics
   name: kube-state-metrics
   namespace: kube-system
 spec:
   selector:
     matchLabels:
-      k8s-app: kube-state-metrics
+      k8s-app.kubernetes.io/name: kube-state-metrics
   replicas: 1
   template:
     metadata:
       labels:
-        k8s-app: kube-state-metrics
+        k8s-app.kubernetes.io/name: kube-state-metrics
     spec:
       serviceAccountName: kube-state-metrics
       containers:
