--- a/Charts/kubernetes/templates/kube-state-metrics-service.yaml
+++ b/Charts/kubernetes/templates/kube-state-metrics-service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: kube-state-metrics
   namespace: kube-system
   labels:
-    k8s-app: kube-state-metrics
+    k8s-app.kubernetes.io/name: kube-state-metrics
   annotations:
     prometheus.io/scrape: 'true'
 spec:
@@ -18,4 +18,4 @@ spec:
     targetPort: telemetry
     protocol: TCP
   selector:
-    k8s-app: kube-state-metrics
+    k8s-app.kubernetes.io/name: kube-state-metrics
