--- a/Charts/metricbeat/templates/clusterrole.yaml
+++ b/Charts/metricbeat/templates/clusterrole.yaml
@@ -4,7 +4,7 @@ kind: ClusterRole
 metadata:
   name: {{ template "metricbeat.fullname" . }}
   labels:
-    app: {{ template "metricbeat.name" . }}
+    app.kubernetes.io/name: {{ template "metricbeat.name" . }}
     chart: {{ template "metricbeat.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
