images is now .net core

--- a/Images/Images.csproj
+++ b/Images/Images.csproj
@@ -1,197 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{78A69CC0-1CA5-4D1A-889F-765212271A9A}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Files</RootNamespace>
-    <AssemblyName>ImageFiles</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
-    <LangVersion>latest</LangVersion>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Readme.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="cadence-test\build.ps1" />
-    <None Include="cadence-test\cassandra.yaml" />
-    <None Include="cadence-test\config_template.yaml" />
-    <None Include="cadence-test\Dockerfile" />
-    <None Include="cadence-test\entrypoint.sh" />
-    <None Include="cadence-test\publish.ps1" />
-    <None Include="cadence-test\README.md" />
-    <None Include="cadence-test\setup.sh" />
-    <None Include="couchbase-test\Dockerfile">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="couchbase-test\init-cluster.sh" />
-    <Content Include="aspnet\.dockerignore">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <None Include="aspnet\build.ps1" />
-    <None Include="aspnet\Dockerfile">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="aspnet\publish.ps1" />
-    <None Include="aspnet\README.md" />
-    <None Include="aspnet\resolv.conf.head.sh" />
-    <None Include="dotnet\resolv.conf.head.sh" />
-    <None Include="golang\.dockerignore" />
-    <None Include="golang\build.ps1" />
-    <None Include="golang\docker-entrypoint.sh" />
-    <None Include="golang\Dockerfile" />
-    <None Include="golang\publish.ps1" />
-    <None Include="golang\README.md" />
-    <None Include="haproxy\.dockerignore" />
-    <None Include="haproxy\build.ps1" />
-    <None Include="haproxy\docker-entrypoint.sh" />
-    <None Include="haproxy\Dockerfile" />
-    <None Include="haproxy\publish.ps1" />
-    <None Include="haproxy\README.md" />
-    <Content Include="couchbase-test\.dockerignore">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <None Include="couchbase-test\build.ps1" />
-    <None Include="couchbase-test\entrypoint.sh" />
-    <None Include="couchbase-test\publish.ps1" />
-    <None Include="couchbase-test\README.md" />
-    <Content Include="nats\.dockerignore">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="nats-streaming\.dockerignore">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <None Include="nats-streaming\build.ps1" />
-    <None Include="nats-streaming\Dockerfile">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="nats-streaming\publish.ps1" />
-    <None Include="nats-streaming\README.md" />
-    <None Include="nats\build.ps1" />
-    <None Include="nats\Dockerfile">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="nats\publish.ps1" />
-    <None Include="nats\README.md" />
-    <None Include="test\docker-entrypoint.sh" />
-    <None Include="test\Dockerfile" />
-    <Content Include="alpine\.dockerignore">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <None Include="alpine\build.ps1" />
-    <None Include="alpine\Dockerfile">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="alpine\publish.ps1" />
-    <None Include="alpine\README.md" />
-    <Content Include="ubuntu-16.04-dotnet\.dockerignore">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="test\.dockerignore">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <None Include="test\build.ps1" />
-    <None Include="test\publish.ps1" />
-    <None Include="test\README.md" />
-    <Content Include="ubuntu-16.04-aspnet\.dockerignore">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <None Include="ubuntu-16.04-aspnet\build.ps1">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="ubuntu-16.04-aspnet\Dockerfile">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="ubuntu-16.04-aspnet\publish.ps1" />
-    <None Include="ubuntu-16.04-aspnet\README.md" />
-    <None Include="ubuntu-16.04-dotnet\build.ps1">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="ubuntu-16.04-dotnet\Dockerfile">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="ubuntu-16.04-dotnet\publish.ps1" />
-    <None Include="ubuntu-16.04-dotnet\README.md" />
-    <None Include="_common\container-init.sh" />
-    <None Include="_common\log-debug.sh" />
-    <None Include="_common\log-critical.sh" />
-    <None Include="_common\log-info.sh" />
-    <Content Include="dotnet\.dockerignore">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <None Include="dotnet\build.ps1" />
-    <None Include="dotnet\Dockerfile">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="dotnet\publish.ps1" />
-    <None Include="dotnet\README.md" />
-    <None Include="_common\log-error.sh" />
-    <None Include="includes.ps1" />
-    <None Include="_common\log-index.sh" />
-    <None Include="_common\log-serror.sh" />
-    <None Include="_common\log-sinfo.sh" />
-    <None Include="_common\log-warn.sh" />
-    <None Include="publish.ps1" />
-    <Content Include="ubuntu-16.04\.dockerignore">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <None Include="ubuntu-16.04\build.ps1">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="ubuntu-16.04\Dockerfile">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="ubuntu-16.04\publish.ps1" />
-    <None Include="ubuntu-16.04\README.md" />
-  </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
-  </PropertyGroup>
-  <PropertyGroup>
-    <PreBuildEvent>
-    </PreBuildEvent>
-  </PropertyGroup>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
