added permissions for fluent-d

--- a/Charts/fluentd/templates/deployment.yaml
+++ b/Charts/fluentd/templates/deployment.yaml
@@ -34,6 +34,8 @@ spec:
         - name: {{ $pullSecret }}
       {{- end }}
 {{- end }}
+      serviceAccountName: fluentd
+      serviceAccount: fluentd
       containers:
       - name: {{ .Chart.Name }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
