--- a/Charts/fluent-bit/templates/daemonset.yaml
+++ b/Charts/fluent-bit/templates/daemonset.yaml
@@ -91,6 +91,9 @@ spec:
         - name: config
           mountPath: /fluent-bit/etc/fluent-bit-output.conf
           subPath: fluent-bit-output.conf
+        - name: config
+          mountPath: /fluent-bit/etc/functions.lua
+          subPath: functions.lua
 
 {{- if .Values.parsers.enabled }}
         - name: config
